# testing-agent

./: .env  .env.example  .gitignore  build.spec  pyproject.toml  run.py  setup.bat  test-cases-Inicio-de-sesión-en-clientes.balanz.com.txt
src/test_case_agent/: app.py  cli.py
src/test_case_agent/core/: generator.py  models.py  prompts.py
src/test_case_agent/templates/: index.html
